[package]
name = "cv-convert-generate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
indexmap = { version = "1.9.3", features = ["serde"] }
itertools = "0.10.5"
once_cell = "1.18.0"
proc-macro2 = "1.0.64"
quote = "1.0.29"
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.7.6"
unzip-n = "0.1.2"
