[package]
name = 'cv-convert'
description = 'Type conversions among famous Rust computer vision libraries'
version = '0.22.0'
authors = ['jerry73204 <jerry73204@gmail.com>']
edition = '2021'
documentation = 'https://docs.rs/cv-convert/'
repository = 'https://github.com/jerry73204/rust-cv-convert.git'
homepage = 'https://github.com/jerry73204/rust-cv-convert/'
readme = 'README.md'
license = 'MIT'

[package.metadata.docs.rs]
features = ['docs-only']

[features]
default = [
    'image_0-24',
    'imageproc_0-23',
    'opencv_0-81-5',
    'tch_0-13',
    'nalgebra_0-32',
    'ndarray_0-15',
]
docs-only = [
    'image_0-24',
    'imageproc_0-23',
    'opencv_0-81-5',
    'tch_0-13',
    'nalgebra_0-32',
    'ndarray_0-15',
    'tch_0-13/doc-only',
]

[dev-dependencies]
approx = '0.5.1'
itertools = "0.10.5"
rand = "0.8.5"

[dependencies]
anyhow = "1.0.71"
num-traits = '0.2.15'
slice-of-array = "0.3.2"
half = '2'

## Start of generated dependencies

[dependencies.image_0-24]
version = '0.24'
package = 'image'
default-features = true
features = []
optional = true

[dependencies.nalgebra_0-32]
version = '0.32'
package = 'nalgebra'
default-features = true
features = []
optional = true

[dependencies.opencv_0-81-5]
version = '0.81.5'
package = 'opencv'
default-features = false
features = ['calib3d']
optional = true

[dependencies.ndarray_0-15]
version = '0.15'
package = 'ndarray'
default-features = true
features = []
optional = true

[dependencies.tch_0-13]
version = '0.13'
package = 'tch'
default-features = true
features = []
optional = true

[dependencies.imageproc_0-23]
version = '0.23'
package = 'imageproc'
default-features = true
features = []
optional = true

## End of generated dependencies
